updated README and added db-migraton.md